spring-cloud/config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: spring-cloud
  labels:
    app: spring-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud
  template:
    metadata:
      labels:
        app: spring-cloud
    spec:
      containers:
      - name: config-server
        image: chupdachups/spring-cloud-config:docker
        ports:
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: spring-cloud
spec:
  selector:
    app: spring-cloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9001
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: config-server
  namespace: spring-cloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: myconfig.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: config-server
            port:
              number: 80
