spring-cloud/eureka-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: spring-cloud
  labels:
    app: eureka
spec:
  clusterIP: None
  ports:
  - port: 8761
    name: eureka
  selector:
    app: eureka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
  namespace: spring-cloud
spec:
  serviceName: 'eureka'
  # n instances
  replicas: 3
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image: chupdachups/spring-cloud-eureka:docker
        ports:
        - containerPort: 8761
#        resources:
#          requests:
#            memory: "1Gi"
#            cpu: "500m"
#          limits:
#            memory: "1200Mi"
#            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: eureka
  namespace: spring-cloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: myeureka.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eureka
            port:
              number: 8761
