spring-cloud/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: spring-cloud
  labels:
    app: spring-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud-gateway
  template:
    metadata:
      labels:
        app: spring-cloud-gateway
    spec:
      containers:
      - name: gateway
        image: chupdachups/spring-cloud-gateway:k8s
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: spring-cloud
spec:
  selector:
    app: spring-cloud-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gateway
  namespace: spring-cloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: mygateway.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
