spring-cloud/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: spring-cloud
  labels:
    app: spring-cloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-cloud-webserver
  template:
    metadata:
      labels:
        app: spring-cloud-webserver
    spec:
      containers:
      - name: webserver
        image: chupdachups/spring-cloud-webserver:docker
        ports:
        - containerPort: 5011
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: spring-cloud
spec:
  selector:
    app: spring-cloud-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5011
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: webserver
  namespace: spring-cloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: mywebserver.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver
            port:
              number: 80
